# advent-of-code

./: aoc2022.cabal  hie.yaml
2022/: README.md  aoc2022.cabal
2022/days/: Day07.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day23.hs  Day25.hs
2022/lib/Aoc/: RangeSet.hs
2024/: .gitignore  README.md  aoc2024.cabal
2024/days/: Day01.hs  Day02.hs
2024/lib/: Aoc.hs
days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day13.hs  Day14.hs  Day21.hs  Day22.hs  Day24.hs
lib/: Aoc.hs
