cabal-version: 2.4
name:          aoc2022
version:       0.1.0.0

author:        Jan Teske
maintainer:    jteske@posteo.net

library
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:      -Wall
    exposed-modules:  Aoc
    build-depends:
        base       ^>= 4.16,
        megaparsec ^>= 9.2,

common day
    hs-source-dirs:   days
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aoc2022,
        base       ^>= 4.16,
        containers ^>= 0.6,
        megaparsec ^>= 9.2,

executable day01
    import:  day
    main-is: Day01.hs

executable day02
    import:  day
    main-is: Day02.hs

executable day03
    import:  day
    main-is: Day03.hs

executable day04
    import:  day
    main-is: Day04.hs

executable day05
    import:  day
    main-is: Day05.hs

executable day06
    import:  day
    main-is: Day06.hs

executable day07
    import:  day
    main-is: Day07.hs
