cabal-version: 2.4
name:          aoc2022
version:       0.1.0.0

author:        Jan Teske
maintainer:    jteske@posteo.net

library
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:      -Wall
    exposed-modules:
        Aoc
        Aoc.RangeSet
    build-depends:
        base       ^>= 4.16,
        megaparsec ^>= 9.2,

common day
    hs-source-dirs:   days
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aoc2022,
        base       ^>= 4.16,
        containers ^>= 0.6,
        megaparsec ^>= 9.2,
        mtl        ^>= 2.3,

executable day01
    import:  day
    main-is: Day01.hs

executable day02
    import:  day
    main-is: Day02.hs

executable day03
    import:  day
    main-is: Day03.hs

executable day04
    import:  day
    main-is: Day04.hs

executable day05
    import:  day
    main-is: Day05.hs

executable day06
    import:  day
    main-is: Day06.hs

executable day07
    import:  day
    main-is: Day07.hs

executable day08
    import:  day
    main-is: Day08.hs

executable day09
    import:  day
    main-is: Day09.hs

executable day10
    import:  day
    main-is: Day10.hs

executable day11
    import:  day
    main-is: Day11.hs

executable day12
    import:  day
    main-is: Day12.hs

executable day13
    import:  day
    main-is: Day13.hs

executable day14
    import:  day
    main-is: Day14.hs

executable day15
    import:  day
    main-is: Day15.hs

executable day16
    import:  day
    main-is: Day16.hs

executable day17
    import:  day
    main-is: Day17.hs

executable day18
    import:  day
    main-is: Day18.hs

executable day19
    import:  day
    main-is: Day19.hs

executable day20
    import:  day
    main-is: Day20.hs

executable day21
    import:  day
    main-is: Day21.hs

executable day22
    import:  day
    main-is: Day22.hs

executable day23
    import:  day
    main-is: Day23.hs

executable day24
    import:  day
    main-is: Day24.hs
