cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0

author:        Jan Teske
maintainer:    jteske@posteo.net

library
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:      -Wall
    exposed-modules:
        Aoc
    build-depends:
        base       ^>= 4.17,
        megaparsec ^>= 9.7,

common day
    hs-source-dirs:   days
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aoc2024,
        base       ^>= 4.17,
        containers ^>= 0.7,
        megaparsec ^>= 9.7,

executable day01
    import:  day
    main-is: Day01.hs

executable day02
    import:  day
    main-is: Day02.hs
